# RAG-Zhen

./: .gitignore  EPD-questions-ground_truths.xlsx  app.py  doc_stats.py  ingestion.py  main.py  pyproject.toml  rag_gpt-4.1_no_tablas_logs.jsonl  rag_logs.jsonl  rag_qwen3_no_tablas_logs.jsonl  ragas rag-zhen:gpt-4.1.txt  ragas rag-zhen:qwen3.txt  ragas_answer_accuracy.py  ragas_batch_evaluation.py  ragas_evaluate.py  ragas_evaluation_summary_20251215_094614.txt  ragas_experiments.py
graph/: consts.py  graph.py  logger.py  state.py
graph/chains/: answer_grader.py  generation.py  hallucination_grader.py  retrieval_grader.py
graph/chains/tests/: test_chains.py
graph/nodes/: __init__.py  detect_mode.py  generate.py  grade_documents.py  retrieve.py
storage/383dafec-d854-48ee-b667-f7c96a0ae842/: bom_text.txt  description_text.txt  session_docs.json
