[project]
name = "rag-zhen"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "black>=25.11.0",
    "chainlit>=2.9.2",
    "chromadb>=1.3.5",
    "faiss-cpu>=1.13.1",
    "isort>=7.0.0",
    "langchain>=1.1.0",
    "langchain-chroma>=1.0.0",
    "langchain-community>=0.4.1",
    "langchain-openai>=1.1.0",
    "langchainhub>=0.1.21",
    "langgraph>=1.0.4",
    "pandas>=2.3.3",
    "pypdf>=6.4.0",
    "python-dotenv>=1.2.1",
    "ragas>=0.4.0",
    "tavily-python>=0.7.13",
]
